# Theia

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  theia_util.sh
.github/workflows/: codeql.yml
include/: README.md  blur.hpp  log.hpp  sharp.hpp  tone.hpp
scripts/: README.md  install_gtests.sh  install_opencv.sh
src/: README.md  blur.cpp  log.cpp  sharp.cpp  theia.cpp  tone.cpp
tests/: README.md  blur_test.cpp  log_test.cpp  sharp_test.cpp
